--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,20 @@
 .login-form {
   width: 100%;
-  max-width: 300px;
+  max-width: 500px;
+  padding: 15px;
+  margin: auto;
+  height: 100%;
+}
+.register-form {
+  width: 100%;
+  max-width: 500px;
+  padding: 15px;
+  margin: auto;
+  height: 100%;
+}
+.forgot-form {
+  width: 100%;
+  max-width: 500px;
   padding: 15px;
   margin: auto;
   height: 100%;
