Adding styling with css

--- a/src/App.css
+++ b/src/App.css
@@ -19,3 +19,13 @@
   margin: auto;
   height: 100%;
 }
+.changePassword {
+  width: 100%;
+  margin: auto;
+  height: 100%;
+}
+.changeEmail {
+  width: 17%;
+  margin: 0px;
+  height: 100%;
+}
