--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+@import '~@fullcalendar/core/main.css';
+@import '~@fullcalendar/daygrid/main.css';
+
 .login-form {
   width: 100%;
   max-width: 500px;
